--- a/task1-sidebar/index.html
+++ b/task1-sidebar/index.html
@@ -29,3 +29,14 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Collapsible Sidebar</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Your sidebar and content go here -->
+</body>
+</html>
