--- a/index (1).html
+++ b/index (1).html
@@ -40,3 +40,14 @@
   <!-- Your sidebar and content go here -->
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Collapsible Sidebar</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Your sidebar and content go here -->
+</body>
+</html>
