Update comment for sidebar toggle functionality

--- a/index (1).html
+++ b/index (1).html
@@ -48,6 +48,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Your sidebar and content go here -->
+  <!-- button to toggle open and close-->
 </body>
 </html>
