--- a/index (1).html
+++ b/index (1).html
@@ -37,7 +37,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Your sidebar and content go here -->
+  <!-- <ul class="menu">
+      <li>🏠 Home</li>
+      <li>👤 Profile</li>
+      <li>📁 Projects</li>
+      <li>📞 Contact</li>
+      <li>⚙ Settings</li>
+</ul>Your sidebar and content go here -->
 </body>
 </html>
 <!DOCTYPE html>
